--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
     <div class="container">
       <div class="wrapper">
         <div class="view">
-          <h1>Lagos</h1>
+          <h1 id="city">Lagos</h1>
           <form>
             <span class="mb-1">
               <input type="text" class="form-control form-size" id="form-text" />
@@ -32,7 +32,7 @@
               <div class="d-flex weather-temperature">
                 <img
                   src="https://ssl.gstatic.com/onebox/weather/64/rain_light.png"
-                  alt="Clear"
+                  alt=""
                   id="icon"
                 />
                 <div>
