Adjusted the image size

--- a/index.html
+++ b/index.html
@@ -34,6 +34,8 @@
                   src="https://ssl.gstatic.com/onebox/weather/64/rain_light.png"
                   alt=""
                   id="icon"
+                  width="75px"
+                  height="75px"
                 />
                 <div>
                   <strong class="temp" id="temperature">26</strong
