--- a/index.html
+++ b/index.html
@@ -18,13 +18,14 @@
     <div class="container">
       <div class="wrapper">
         <div class="view">
-          <h1 id="city">Lagos</h1>
+          <h1 id="city"></h1>
           <form>
             <span class="mb-1">
               <input
                 type="text"
                 class="form-control form-size"
                 id="form-text"
+                value="lagos"
               />
             </span>
             <button type="submit" class="btn btn-primary search">Search</button>
